build: release 25.10.2